[gd_scene load_steps=3 format=3 uid="uid://dsihg6mcq4ysb"]

[ext_resource type="Script" path="res://Script/dev_mode.gd" id="1_cqayl"]
[ext_resource type="LabelSettings" uid="uid://jda8so48mgcw" path="res://Escenas/dev_mode_font.tres" id="2_0wr73"]

[node name="DevMode" type="CanvasLayer"]
layer = 100
script = ExtResource("1_cqayl")

[node name="DetallesUbicacion" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 71.0

[node name="NombreZona" type="Label" parent="DetallesUbicacion"]
layout_mode = 2
text = "Zona: Zona1"
label_settings = ExtResource("2_0wr73")

[node name="NombreEscena" type="Label" parent="DetallesUbicacion"]
layout_mode = 2
text = "Escena: Intro"
label_settings = ExtResource("2_0wr73")

[node name="DetallesDialogo" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.8
anchor_bottom = 1.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0

[node name="NombreDialogo" type="Label" parent="DetallesDialogo"]
layout_mode = 2
text = "Dialogo: Dialogo1"
label_settings = ExtResource("2_0wr73")

[node name="VSeparator" type="VSeparator" parent="DetallesDialogo"]
layout_mode = 2

[node name="Linea" type="Label" parent="DetallesDialogo"]
layout_mode = 2
text = "Linea: 1"
label_settings = ExtResource("2_0wr73")

[node name="SeleccionEscena" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 400)
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 410.0
grow_horizontal = 0
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="SeleccionEscena"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SeleccionEscena/PanelContainer"]
layout_mode = 2

[node name="Zonas" type="VBoxContainer" parent="SeleccionEscena/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Zonas" type="Label" parent="SeleccionEscena/PanelContainer/VBoxContainer/Zonas"]
layout_mode = 2
text = "Zonas"
label_settings = ExtResource("2_0wr73")

[node name="HSeparator" type="HSeparator" parent="SeleccionEscena/PanelContainer/VBoxContainer/Zonas"]
layout_mode = 2

[node name="Escenas" type="VBoxContainer" parent="SeleccionEscena/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Escenas" type="Label" parent="SeleccionEscena/PanelContainer/VBoxContainer/Escenas"]
layout_mode = 2
text = "Escenas"
label_settings = ExtResource("2_0wr73")

[node name="HSeparator" type="HSeparator" parent="SeleccionEscena/PanelContainer/VBoxContainer/Escenas"]
layout_mode = 2
